--- a/taxcalculator/pom.xml
+++ b/taxcalculator/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.example</groupId>
 	<artifactId>taxcalculator</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>taxcalculator</name>
 	<description>Demo project for Tax Calculator</description>
 	<properties>
